--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         <div class="container">
             <div class="book-icon">
                 <h2>BC</h2>
-                <i class="fa-solid fa-book"></i>
-
+                <div class="icon">
+                    <i class="fa-solid fa-book"></i>
+                </div>
             </div>
             <div>
                 <i class="fas fa-bars toggle-menu"></i>
@@ -45,14 +46,15 @@
 
     <!--End Header Section -->
     <!-- Start Landing -->
-    <section>
+    <section class="image">
+        <div class="container">
+            <div>
+                <div class="content-text">
+                    <h2>Books Corner</h2>
+                    <p>" Where books live "</p>
+                </div>
 
-        <div class="image">
-            <div class="content-text">
-                <h2>Books Corner</h2>
-                <p>" Where books live "</p>
             </div>
-
         </div>
 
     </section>
@@ -727,9 +729,11 @@
         <div class="container">
             <div class="dots dots-up"></div>
             <div class="image"><img src="imgs/pngwing.com (1).png" alt=""></div>
-            <h3>Contact Us</h3>
-            <h2>Feel free to drop us a line at:</h2>
-            <a href="" class="mail">BooksCorner2024@mail.com</a>
+            <div class="text">
+                <h3>Contact Us</h3>
+                <h2>Feel free to drop us a line at:</h2>
+                <a href="" class="mail">BooksCorner2024@mail.com</a>
+            </div>
             <div class="dots dots-down"></div>
 
         </div>
